# company-os

ai-services/: .env.example  Dockerfile  main.py  pyproject.toml
ai-services/agents/: orchestrator.py  router.py
ai-services/app/: config.py  main.py
ai-services/rag/: chunking.py  embeddings.py  parsers.py  pipeline.py  router.py  vectorstore.py
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/auth/: dependencies.py
backend/clients/: ai_services.py
backend/db/: session.py
backend/migrations/: env.py
backend/migrations/versions/: ab7480eb8177_initial_schema.py
backend/models/: __init__.py  chat_message.py  company.py  document.py  profile.py
backend/routers/: chat.py  companies.py  documents.py
backend/schemas/: chat.py  company.py  document.py
docker/: .env.example  .gitignore  docker-compose.yml
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: SignOutButton.tsx  layout.tsx  page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/documents/: UploadForm.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: AuthShell.tsx
frontend/src/components/dashboard/: Sidebar.tsx
frontend/src/components/marketing/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Logo.tsx  Reveal.tsx
frontend/src/lib/: api.ts
frontend/src/lib/supabase/: proxy.ts  server.ts
